--- a/ExApiRest.DataAccess/ExApiRest.DataAccess.csproj
+++ b/ExApiRest.DataAccess/ExApiRest.DataAccess.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.Restier.EntityFrameworkCore" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExApiRest.Abstractions\ExApiRest.Abstractions.csproj" />
     <ProjectReference Include="..\ExApiRest.Entities\ExApiRest.Entities.csproj" />
     <ProjectReference Include="..\ExApiRest.Services\ExApiRest.Services.csproj" />
