--- a/ExApiRest.DataAccess/ExApiRest.DataAccess.csproj
+++ b/ExApiRest.DataAccess/ExApiRest.DataAccess.csproj
@@ -7,6 +7,9 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Restier.EntityFrameworkCore" Version="1.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14" />
+
   </ItemGroup>
 
   <ItemGroup>
