--- a/ExApiRest.Webapi/ExApiRest.Webapi.csproj
+++ b/ExApiRest.Webapi/ExApiRest.Webapi.csproj
@@ -14,9 +14,12 @@
   </ItemGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5" />
+	  
 
   </ItemGroup>
 
