--- a/ExApiRest.Webapi/appsettings.json
+++ b/ExApiRest.Webapi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ZR,Initial Catalog=ApiRest;Integrated Security=true;"
+  },
+  "JwtConfig": {
+    "Secret": "sbaukbqwyyddochykeqoomstfjvwnirf"
   }
 }
