--- a/ExApiRest.Services/ExApiRest.Services.csproj
+++ b/ExApiRest.Services/ExApiRest.Services.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExApiRest.Abstractions\ExApiRest.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
