last changes, jwt, doker,azure

--- a/ExApiRest.Webapi/appsettings.json
+++ b/ExApiRest.Webapi/appsettings.json
@@ -6,11 +6,34 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ZR,Initial Catalog=ApiRest;Integrated Security=true;"
-  },
-  "JwtConfig": {
-    "Secret": "sbaukbqwyyddochykeqoomstfjvwnirf"
+  "Serilog": {
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=192.168.1.49,Initial Catalog=ApiRest;Integrated Security=true;"
+    },
+    "JwtConfig": {
+      "Secret": "sbaukbqwyyddochykeqoomstfjvwnirf"
+    },
+
+    "MinimunLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+
+    "WriteTo": [
+      {
+        "Name": "MongoDB",
+        "Args": {
+          "databaseUrl": "mongodb://mongo/logs",
+            "cappedMaxSizeMb": "1024",
+          "cappedMaxDocuments": "50000"
+        }
+      }
+    ]
   }
 }
+
+  
