--- a/ExApiRest.Webapi/Dockerfile
+++ b/ExApiRest.Webapi/Dockerfile
@@ -1,8 +1,5 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -11,6 +8,12 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["ExApiRest.Webapi/ExApiRest.Webapi.csproj", "ExApiRest.Webapi/"]
+COPY ["ExApiRest.Abstractions/ExApiRest.Abstractions.csproj", "ExApiRest.Abstractions/"]
+COPY ["ExApiRest.Application/ExApiRest.Application.csproj", "ExApiRest.Application/"]
+COPY ["ExApiRest.Entities/ExApiRest.Entities.csproj", "ExApiRest.Entities/"]
+COPY ["ExApiRest.Repository/ExApiRest.Repository.csproj", "ExApiRest.Repository/"]
+COPY ["ExApiRest.DataAccess/ExApiRest.DataAccess.csproj", "ExApiRest.DataAccess/"]
+COPY ["ExApiRest.Services/ExApiRest.Services.csproj", "ExApiRest.Services/"]
 RUN dotnet restore "ExApiRest.Webapi/ExApiRest.Webapi.csproj"
 COPY . .
 WORKDIR "/src/ExApiRest.Webapi"
